@@ -1,6 +1,10 @@
 Major changes since 0.95
 ------------------------
 
+- Adding $in_reply_to, but with a different default which is safe
+  and should not trigger rfc2047 encoding.  Please don't use %n,
+  localized dates or similar things with this format.
+
 - Added $bounce_delivered; this is a back-port from unstable.  See
   the manual for details.
 
